--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 	justify-content: center;
 	align-items: center;
 }
-.container
+.main
 {
 	margin: 30px auto;
 	padding: 0 30px;
@@ -125,7 +125,7 @@ button.cta img
 	}
 }
 @media only screen and (max-width: 375px) {
-	.container
+	.main
 	{
 		margin: 15px auto;
 		padding: 0 15px;
